Fixed login zoom and scrollbar (width issue)

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -47,7 +47,7 @@
 }
 
 .fade-in {
-  animation: fadeIn 0.3s ease-in-out forwards;
+  animation: fadeIn 0.4s ease-in-out forwards;
 }
 
 .fade-out {
@@ -55,14 +55,14 @@
 }
 
 .slide-in {
-  animation: slideIn 0.3s ease-in-out forwards;
+  animation: slideIn 0.2s ease-in-out forwards;
 }
 
 .slide-out {
-  animation: slideOut 0.3s ease-in-out forwards;
+  animation: slideOut 0.15s ease-in-out forwards;
 }
 
-
+/* SVG morphing class */
 .hb {
   width: fit-content;
   margin: 0 0;
